// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Endpoint the requestConfig will return combine headers 1`] = `
Object {
  "baseURL": "http://localhost",
  "headers": Object {
    "Accept": "text/html",
    "X-A": "baz",
    "foo": "bar",
  },
  "method": "PUT",
  "paramsSerializer": [Function],
  "url": "final/path",
}
`;

exports[`Endpoint the requestConfig will return default options 1`] = `
Object {
  "baseURL": "http://localhost",
  "method": "get",
  "paramsSerializer": [Function],
  "url": "final/path",
}
`;
